# kairu

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  KONJO_PROMPT.md  KONJO_QUALITY_FRAMEWORK.md  PLAN.md  README.md  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.json
.claude/agents/: researcher.md
.claude/commands/: konjo.md
.claude/hooks/: on-stop.sh  post-edit.sh
.claude/rules/: benchmarking.md  git-workflow.md  python-conventions.md  security.md  testing.md
.github/workflows/: ci.yml  docker.yml  konjo-gate.yml
.konjo/hooks/: pre-commit
.konjo/scripts/: dry_check.py  install-hooks.sh  konjo_review.py
api/: Dockerfile  __init__.py  main.py  marketplace_router.py  requirements.txt  test_api.py
benchmarks/: run_corpus.py
benchmarks/results/: 20260429T003209Z_benchmark.json
dashboard/: CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
demo/: demo.py  index.html  server.py
demo/sample_comparisons/: 01_helpful_vs_unhelpful.json  02_concise_vs_verbose.json  03_safe_vs_pii_leak.json  (+1 more)
kairu/: __init__.py  __main__bench.py  _hf_backend.py  adversarial.py  analytics.py  audit.py  auto_profile.py  base.py  bench.py  benchmarks.py  budget.py  calibration.py  ci_regression.py  cli.py  cluster_budget.py  conformal.py  constitutional.py  cross_regression.py  cyclic_judge.py  dashboard.py  early_exit.py  ensemble.py  evaluation.py  feedback.py  gamma_scheduler.py  human_feedback.py  kv_cache.py  layered.py  leaderboard.py  log_eval.py  marketplace.py  metrics.py  metrics_export.py  mock_model.py  prompts.py  rate_limit.py  reliability.py  router.py  rubrics.py  server.py  (+14 more)
scripts/: start.sh
tests/: test_adversarial.py  test_analytics.py  test_audit.py  test_auto_profile.py  test_bench.py  test_benchmarks.py  test_budget.py  test_calibration.py  test_ci_regression.py  test_cli.py  test_cluster_budget.py  test_conformal.py  test_constitutional.py  test_corpus_bench.py  test_cross_regression.py  test_cyclic_judge.py  test_early_exit.py  test_ensemble.py  test_evaluation.py  test_feedback.py  test_gamma_scheduler.py  test_hf_backend.py  test_human_feedback.py  test_jsonl_stream.py  test_kv_cache.py  test_layered.py  test_leaderboard.py  test_log_eval.py  test_marketplace.py  test_metrics.py  test_metrics_export.py  test_prompts.py  test_rate_limit.py  test_reliability.py  test_router.py  test_rubrics.py  test_server.py  test_shield.py  test_significance.py  test_speculative.py  (+11 more)
(+40 files in other folders)
