[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairu"
version = "0.1.0"
description = "Real-time LLM inference optimizer: speculative decoding, early exit, token budget"
license = { text = "BUSL-1.1" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
hf = ["torch>=2.0.0", "transformers>=4.35.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
