[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairu"
version = "0.13.0"
description = "Real-time LLM inference optimizer: speculative decoding, layered early exit, KV-cache recycling, adaptive γ, SSE/JSONL streaming, Prometheus metrics, Redis-backed rate limiting, OpenTelemetry tracing, cluster token budgets, token watermarking, squish quantization-quality eval, rubric-based response evaluation + A/B comparison HTTP API, eight named rubrics + prism UI, prompt shield content policy"
license = { text = "BUSL-1.1" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
hf = ["torch>=2.0.0", "transformers>=4.35.0"]
server = ["fastapi>=0.110.0", "uvicorn>=0.27.0", "pydantic>=2.0.0"]
redis = ["redis>=5.0.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
kairu = "kairu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
